--- a/style/css.css
+++ b/style/css.css
@@ -1,23 +1,35 @@
 *{
+    font-family: "Oswald", sans-serif;
     padding: 0;
     margin: 0;
     list-style: none;
     text-decoration: none;
-}
-
-a{
     text-decoration: none;
     color: #fff;
 }
 
+/* VARIABLES COLORES  */
+:root{
+    --colorNegro: rgb(0, 0, 0);
+    --colorSecundario: #b0b0b0;
+    --colorVerde: #17FF00;
+    --colorRojo: #FF0C0C;
+    --colorAzul: #0040FF;
+}
+
 body{
-    font-family: "Oswald", sans-serif;
     background-color: #000;
     /* Patrones para Css: https://www.heropatterns.com/ */
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%23540606' fill-opacity='0.1'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     color: #1e272e;
     color: #fff;
     font-size: 16px;
+}
+
+.bodyFomularios{
+    background-image: url(../images/backBlue.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .Botones{
@@ -33,16 +45,9 @@ body{
     margin: 10px 0 ;
 }
 
-
-
-
-
 /*--------------------------------------*/
+.Contenedor-Principal{width: 90%;margin: auto;}
 
-.Contenedor-Principal{
-    width: 90%;
-    margin: auto;
-}
 
 /*------------------ NAVEGACION --------------------*/
 
@@ -57,17 +62,9 @@ body{
     transition: 1.1s;
 }
 
-.LogoPrincipal:hover{
-    transform: scale(.8);
-}
+.LogoPrincipal:hover{transform: scale(.8);}
 
-.textblanco{
-    color: #fff;
-    padding: 0 3px;
-}
-
-
-
+.textblanco{color: #fff;padding: 0 3px;}
 
 .BarraNav{
     background-color: #000;
@@ -79,32 +76,20 @@ body{
     padding: 10px;
 }
 
-
 .BarraNav ul{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.BarraNav li{
-    padding: 10px;
-}
+.BarraNav li{padding: 10px;}
 
-.BarraNav a{
-    padding: 5px;
-}
+.BarraNav a{padding: 5px;}
 
-.BarraNav li a:hover{
-    border-bottom: 3px solid #fff; /* LINEA DEBAJO DEL TEXTO A LA HORA DE TOCARLO*/
-}
+.BarraNav li a:hover{border-bottom: 3px solid var(--colorAzul) ; color:var(--colorAzul); /* LINEA DEBAJO DEL TEXTO A LA HORA DE TOCARLO*/}
+.ImgLogo{border-radius: 50%;width: 65px;height: 45px;}
 
-
-.ImgLogo{
-    border-radius: 50%;
-    width: 65px;
-    height: 45px;
-}
-
+.colorBlue{color:#0040FF; padding: 10px;}
 
 /*------------------ SECCCION 1  --------------------*/
 
@@ -137,7 +122,6 @@ body{
     grid-template-columns: 1fr  1fr 1fr 1fr;
     gap: 25px; /* Espaciado Interno */
 }
-
 .ContenedorCartas img{
     width: 100%;
     height: 180px;
@@ -145,14 +129,10 @@ body{
     box-shadow: 1px 10px 10px #000;
     transition: 1.1s;
 }
-
-
 .ContenedorCartas img:hover{
     transform: scale(1.1);
     cursor: pointer;
 }
-
-
 
 .ContenedorCartas h3{
     font-weight: bold;
@@ -181,7 +161,6 @@ body{
     flex-direction: column;
     align-items: flex-start;
     transition: 1.1s;
-
 }
 
 .Contenedor-BackImage2 {
@@ -220,10 +199,7 @@ body{
 .ContenedorCartas2 img:hover{
     transform: scale(1.1);
     cursor: pointer;
-
 }
-
-
 
 .ContenedorCartas2 h3{
     font-weight: bold;
@@ -238,9 +214,7 @@ body{
 }
 
 
-
 /*------------------ SECCCION 5 --------------------*/
-
 .BackImage3{
     margin-top: 45px;
     margin-bottom: 45px;
@@ -252,7 +226,6 @@ body{
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
-
 }
 
 .Contenedor-BackImage3{
@@ -265,7 +238,6 @@ body{
     text-align: justify;
     margin: 10px 0;
 }
-
 
 
 /*------------------ SECCCION 6 (LINKS) --------------------*/
@@ -290,95 +262,301 @@ body{
 }
 
 
-/*------------------  MEDIA QUERIS --------------------*/
+
+/*--------------------    V I S T A   D E   R E G I S T E R   --------------------*/
+
+.containerRegister{
+    font-family: "Oswald", sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 88vh;
+}
+
+.register h1{text-align: center;font-size: 20px;}
+
+.register{
+    background-color: var(--colorNegro);
+    width: 380px;
+    height: 450px;
+    padding: 22px;
+    font-size: 15px;
+    color: white;
+    box-sizing: border-box;
+}
+
+.bodyregister{
+    margin : 0;
+    padding : 0;
+    background : url(../images/fondo.jpg);
+    background-size: cover;
+    font-family: sans-serif;
+    height: 100vh;
+}
+
+.register input{
+    margin-top: 20px;
+    display: block;
+    margin: bottom 20px;
+    width: 100%;
+    font-size: 15px;
+}
+
+.grup{position: relative;margin-top: 36px;}
+
+.register label{
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    transition: .3s ;
+    pointer-events: none;
+    color: #424949;
+}
+
+.register input:focus~label,input:valid~label{
+    top: -10px;
+    color: #fff;
+}
 
 
-@media (max-width:700px){
+.register input[type="text"],
+.register input[type="password"]{  /* Aca lo que hice fue solo modificar los inputs de text y password */
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #fff;
+}
 
+.register button {  
+    width: 100%;
+    height: 40px;
+    font-size: 18px;
+    border: none;
+    margin-top: 10%;
+    margin-bottom: 10px;
+    cursor: pointer;
+    color: #fff;
+    background-color: var(--colorSecundario);
+}
 
-    .BarraNav ul li{
-        padding: 20px;
-        font-size: 13px;
-    }
+/*--------------------    V I S T A   D E    L O G I N    --------------------*/
 
+.containerlogin{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 88vh;
+}
 
-    .botonburger {
-        position: absolute;
-        cursor: pointer;
-        top: 9px;
-        right: 24px;
-        font-size: 23px;
-        display: none;
-    }
+.login h1{
+    text-align: center;
+    font-size: 20px;
+    margin-top: 50px;
+}
 
-/*-------------------------------*/
-
-    .LogoPrincipal {
-        font-size: 24px;
-    }
-
-    .ImgLogo{
-        border-radius: 50%;
-        width: 30px;
-        height: 25px;
-    }
-    
-    .BarraNav{
-        font-size: 13px;
-        padding: 1px;
-    }
-    .BarraNav li {
-        padding: 5px;
-    }
-/*-------------------------------*/
-
-    .ContenedorCartas{
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .Contenedor-BackImage2 {
-        width: 77%;
-    }
-/*-------------------------------*/
-
-    .ContenedorCartas2{
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .Contenedor-BackImage3 {
-        text-align: justify;
-        width: 77%;
-    }
+.login{
+    background-color: var(--colorNegro);
+    width: 380px;
+    height: 450px;
+    padding: 22px;
+    font-size: 15px;
+    color: white;
+    box-sizing: border-box;
 
 }
 
+.bodylogin{
+    margin : 0;
+    padding : 0;
+    background : url(../images/fondo.jpg);
+    background-size: cover;
+    font-family: sans-serif;
+    height: 100vh;
+}
+
+
+/*==========================*/
+
+.login input{
+    margin-top: 20px;
+    display: block;
+    margin: bottom 20px;
+    width: 100%;
+    font-size: 15px;
+}
+
+.grupLogin{
+    position: relative;
+    margin-top: 36px;
+}
+
+.login label{
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    transition: .3s ;
+    pointer-events: none;
+    color: #424949;
+}
+
+.login input:focus~label,input:valid~label{
+    top: -10px;
+    color: #fff;
+}
+
+.login input[type="text"],
+.login input[type="password"]{  /* Aca lo que hice fue solo modificar los inputs de text y password */
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #fff;
+}
+
+.login button {  
+    width: 100%;
+    height: 40px;
+    font-size: 18px;
+    border: none;
+    margin-top: 4%;
+    cursor: pointer;
+    color: #fff;
+    background-color: var(--colorSecundario);
+    margin: 30px 0 20px;
+}
+
+
+
+.ContenedoresDePregunta{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 30px;
+}
+
+.ContenedoresDePregunta a{
+    color: darkgrey; 
+    font-size: 15px;
+    padding: 10px;
+    text-align:center;
+}
+
+.ContenedoresDePregunta a:hover{
+    color: var(--colorAzul);
+}
+
+
+
+
+/* ============     I C O N S     ============ */
+.icon1{
+    position:absolute;
+    transform: translate(316px, -27px);
+    color: var(--colorVerde);
+    visibility:hidden;
+}
+
+.icon2{
+    position:absolute;
+    transform: translate(316px, -27px);
+    color: var(--colorVerde);
+    visibility:hidden;
+}
+
+.icon3{
+    position:absolute;
+    transform: translate(316px, 14px);
+    color: var(--colorVerde);
+    visibility:hidden;
+}
+
+/*-----------------------------------*/
+.badIcon1{
+    position:absolute;
+    transform: translate(316px, -27px);
+    color: var(--colorRojo);
+    visibility:hidden;
+}
+
+.badIcon2{
+    position:absolute;
+    transform: translate(316px, -27px);
+    color: var(--colorRojo);
+    visibility:hidden;
+}
+
+.badIcon3{
+    position:absolute;
+    transform: translate(316px, 14px);
+    color: var(--colorRojo);
+    visibility:hidden;
+}
+
+/* ============    I   D'   S    ============ */
+
+#messageCharacter {
+    width: 154px;
+    border-radius: 5px;
+    position: absolute;
+    transform: translate(22%, -45%);
+    font-size: 13px;
+    padding: 4px;
+    text-align: center;
+}
+
+#NumCaracteres{
+    color: rgba(102, 102, 102, 0.572);
+    font-size: 13px;
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    position: absolute;
+    transform: translate(94%, 50%);
+}
+
+
+
+/*------------------  MEDIA QUERIS --------------------*/
+
+@media (max-width:700px){
+    .BarraNav ul li{padding: 20px;font-size: 13px;}
+    .botonburger {
+        position: absolute;top: 9px;right: 24px;
+        cursor: pointer;
+        font-size: 23px;display: none;
+    }
+
+    .LogoPrincipal {font-size: 24px;}
+
+    .ImgLogo{
+        border-radius: 50%;width: 30px;height: 25px;}
+
+    .BarraNav{font-size: 13px;padding: 1px;}
+    .BarraNav li {padding: 5px;}
+
+    .ContenedorCartas{grid-template-columns: 1fr 1fr;}
+
+    .Contenedor-BackImage2 {width: 77%;}
+    .ContenedorCartas2{grid-template-columns: 1fr 1fr;}
+    .Contenedor-BackImage3 {text-align: justify;width: 77%;}
+}
+
+
 @media (max-width:500px){
 
-    .BarraNav{
-        display: none;
-    }
-    .ContenedorCartas{
-        grid-template-columns: 1fr;
-    }
-    .ContenedorCartas img{
-        width: 91%;
-        margin: 15px;
-    }
+    .BarraNav{display: none;}
+    .ContenedorCartas{grid-template-columns: 1fr;}
+    .ContenedorCartas img{width: 91%;margin: 15px;}
 
 
-    .ContenedorCartas2{
-        grid-template-columns: 1fr;
-    }
-    .ContenedorCartas img {
-        width: 91%;
-        margin: 15px;
-    }
+    .ContenedorCartas2{grid-template-columns: 1fr;}
+    .ContenedorCartas img {width: 91%;margin: 15px;}
 
-
-    .Contenedor-BackImage3 {
-        text-align: justify;
-        width: 77%;
-    }
-
+    .Contenedor-BackImage3 {text-align: justify;width: 77%;}
 
 }
