--- a/style/css.css
+++ b/style/css.css
@@ -46,52 +46,96 @@ body{
 }
 
 /*--------------------------------------*/
-.Contenedor-Principal{width: 90%;margin: auto;}
-
-
-/*------------------ NAVEGACION --------------------*/
-
-.LogoPrincipal{
+nav {
+    height: 50px;
+    color: rgb(255, 255, 255);
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+nav .mainMenu {
+display: flex;
+}
+
+nav .mainMenu li a {
+    padding: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    transition: 0.2s ease;
+}
+nav .mainMenu li a:hover {
+    border-bottom: 3px solid var(--colorAzul);;
+}
+nav .openMenu {
+font-size: 2rem;
+margin: 20px;
+display: none;
+cursor: pointer;
+}
+nav .mainMenu .closeMenu,
+.icons i {
+font-size: 2rem;
+display: none;
+cursor: pointer;
+}
+.fa-facebook:hover {color: var(--colorAzul);}
+.fa-twitter:hover {color: var(--colorAzul);}
+.fa-instagram:hover {color: var(--colorAzul);}
+.fa-github:hover {color: var(--colorAzul);}
+
+nav .TextNav h1{
+    padding: 20px;
+    margin: 6px;
+    cursor: pointer;
+}
+
+@media (max-width: 800px) {
+nav .mainMenu {
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    z-index: 10;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: rgb(8, 89, 239);
-    padding: 10px;
-    font-size: 31px;
-    text-shadow: 1px 1px 30px rgba(255, 255, 255, 0.39);
-    transition: 1.1s;
+    background: rgb(0, 0, 0);
+    transition: top 1s ease 0s;
+    display: none;
+}
+nav .mainMenu .closeMenu {
+    display: block;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+nav .openMenu {
+    display: block;
 }
 
-.LogoPrincipal:hover{transform: scale(.8);}
-
-.textblanco{color: #fff;padding: 0 3px;}
-
-.BarraNav{
-    background-color: #000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 17PX;
-    height: 50px;
-    padding: 10px;
+nav .mainMenu li a {
+    margin: 100px;
+}
+nav .mainMenu li a:hover {
+    color: var(--colorAzul);
+    border-bottom: none;
 }
 
-.BarraNav ul{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.icons i {
+    display: inline-block;
+    padding: 12px;
+}
 }
 
-.BarraNav li{padding: 10px;}
-
-.BarraNav a{padding: 5px;}
-
-.BarraNav li a:hover{border-bottom: 3px solid var(--colorAzul) ; color:var(--colorAzul); /* LINEA DEBAJO DEL TEXTO A LA HORA DE TOCARLO*/}
-.ImgLogo{border-radius: 50%;width: 65px;height: 45px;}
-
-.colorBlue{color:#0040FF; padding: 10px;}
 
 /*------------------ SECCCION 1  --------------------*/
+
+.Contenedor-Principal{
+    padding: 50px;
+}
 
 .BackImage{
     height: 500px;
@@ -531,9 +575,9 @@ body{
         font-size: 23px;display: none;
     }
 
-    .LogoPrincipal {font-size: 24px;}
+    .TextNavPrincipal {font-size: 24px;}
 
-    .ImgLogo{
+    .ImgTextNav{
         border-radius: 50%;width: 30px;height: 25px;}
 
     .BarraNav{font-size: 13px;padding: 1px;}
