--- a/style/css.css
+++ b/style/css.css
@@ -10,7 +10,7 @@
 
 /* VARIABLES COLORES  */
 :root{
-    --colorNegro: rgb(0, 0, 0);
+    --colorNegro: #000;
     --colorSecundario: #b0b0b0;
     --colorVerde: #17FF00;
     --colorRojo: #FF0C0C;
@@ -47,17 +47,18 @@ body{
 
 /*--------------------------------------*/
 nav {
-    height: 50px;
+    height: 70px;
     color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-nav .mainMenu {
-display: flex;
+.mainMenu {
+    display: flex;
 }
 
-nav .mainMenu li a {
+.mainMenu li a {
+    display: inline-block;
     padding: 10px;
     text-decoration: none;
     text-transform: uppercase;
@@ -65,34 +66,29 @@ nav .mainMenu li a {
     font-size: 18px;
     transition: 0.2s ease;
 }
-nav .mainMenu li a:hover {
+.mainMenu li a:hover {
     border-bottom: 3px solid var(--colorAzul);;
 }
-nav .openMenu {
+.openMenu {
 font-size: 2rem;
 margin: 20px;
 display: none;
 cursor: pointer;
 }
-nav .mainMenu .closeMenu,
-.icons i {
-font-size: 2rem;
-display: none;
-cursor: pointer;
+.mainMenu .closeMenu{
+    font-size: 2rem;
+    display: none;
+    cursor: pointer;
 }
-.fa-facebook:hover {color: var(--colorAzul);}
-.fa-twitter:hover {color: var(--colorAzul);}
-.fa-instagram:hover {color: var(--colorAzul);}
-.fa-github:hover {color: var(--colorAzul);}
 
-nav .TextNav h1{
+.TextNav h1{
     padding: 20px;
     margin: 6px;
     cursor: pointer;
 }
 
 @media (max-width: 800px) {
-nav .mainMenu {
+.mainMenu {
     height: 100vh;
     position: fixed;
     top: 0px;
@@ -106,28 +102,24 @@ nav .mainMenu {
     transition: top 1s ease 0s;
     display: none;
 }
-nav .mainMenu .closeMenu {
+.mainMenu .closeMenu {
     display: block;
     position: absolute;
     top: 20px;
     right: 20px;
 }
-nav .openMenu {
+.openMenu {
     display: block;
 }
 
-nav .mainMenu li a {
-    margin: 100px;
+.mainMenu li a {
+    margin: 10px;
 }
-nav .mainMenu li a:hover {
+.mainMenu li a:hover {
     color: var(--colorAzul);
     border-bottom: none;
 }
 
-.icons i {
-    display: inline-block;
-    padding: 12px;
-}
 }
 
 
@@ -150,49 +142,6 @@ nav .mainMenu li a:hover {
     text-align: center;
     justify-content: flex-end;
 }
-
-
-
-
-/*------------------ SECCCION 2 --------------------*/
-
-
-/*ACA EN ESTE APARTADO SE COLOCO -- GRID -- */
-
-.ContenedorCartas{
-    margin-top: 25px;
-    margin-bottom: 25px;
-    display: grid;
-    grid-template-columns: 1fr  1fr 1fr 1fr;
-    gap: 25px; /* Espaciado Interno */
-}
-.ContenedorCartas img{
-    width: 100%;
-    height: 180px;
-    border: 2px solid rgba(255, 255, 255, 0.614);
-    box-shadow: 1px 10px 10px #000;
-    transition: 1.1s;
-}
-.ContenedorCartas img:hover{
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
-.ContenedorCartas h3{
-    font-weight: bold;
-    color: #f2f2f2;
-    display: inline-block;
-    font-weight: bold;
-    margin: 5px 0;
-}
-
-.ContenedorCartas p{
-    text-align: justify;
-}
-
-
-
-/*------------------ SECCCION 3  --------------------*/
 
 .BackImage2{
     margin-top: 45px;
@@ -218,7 +167,7 @@ nav .mainMenu li a:hover {
 }
 
 
-/*------------------ SECCCION 4 --------------------*/
+/*------------------ SECCCION 2 --------------------*/
 
 
 /*ACA EN ESTE APARTADO SE COLOCO -- GRID -- */
@@ -258,7 +207,7 @@ nav .mainMenu li a:hover {
 }
 
 
-/*------------------ SECCCION 5 --------------------*/
+/*------------------ SECCCION 3 --------------------*/
 .BackImage3{
     margin-top: 45px;
     margin-bottom: 45px;
@@ -568,39 +517,13 @@ nav .mainMenu li a:hover {
 /*------------------  MEDIA QUERIS --------------------*/
 
 @media (max-width:700px){
-    .BarraNav ul li{padding: 20px;font-size: 13px;}
-    .botonburger {
-        position: absolute;top: 9px;right: 24px;
-        cursor: pointer;
-        font-size: 23px;display: none;
-    }
-
-    .TextNavPrincipal {font-size: 24px;}
-
-    .ImgTextNav{
-        border-radius: 50%;width: 30px;height: 25px;}
-
-    .BarraNav{font-size: 13px;padding: 1px;}
-    .BarraNav li {padding: 5px;}
-
-    .ContenedorCartas{grid-template-columns: 1fr 1fr;}
-
-    .Contenedor-BackImage2 {width: 77%;}
     .ContenedorCartas2{grid-template-columns: 1fr 1fr;}
     .Contenedor-BackImage3 {text-align: justify;width: 77%;}
 }
 
 
 @media (max-width:500px){
-
-    .BarraNav{display: none;}
-    .ContenedorCartas{grid-template-columns: 1fr;}
-    .ContenedorCartas img{width: 91%;margin: 15px;}
-
-
     .ContenedorCartas2{grid-template-columns: 1fr;}
-    .ContenedorCartas img {width: 91%;margin: 15px;}
-
     .Contenedor-BackImage3 {text-align: justify;width: 77%;}
 
 }
